--- a/src/Home.css
+++ b/src/Home.css
@@ -1,5 +1,5 @@
 /* Importing animation library */
-@import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');
+/* @import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css'); */
 
 /* Hero section styles */
 .hero {
